[package]
name = "translator"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = { version = "1.5.5", features = ["derive"] }
csv = "1.3.1"
evalexpr = "12.0.2"
field_accessor = "0.5.2"
lookups = "0.2.0"
serde = { version = "1.0.217", features = ["derive"] }
sqlx = { version = "0.8.3", features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "chrono",
] }
chrono = "0.4.39"
mirror = { path = "../mirror" }